--- a/resume/style/main.css
+++ b/resume/style/main.css
@@ -1,9 +1,13 @@
-body {
-    background-color: rgb(45, 40, 40);
-}
-
 a {
     text-decoration: none;
+}
+
+body {
+    background-color: #efefef;
+}
+
+ol {
+    list-style: none;
 }
 
 .clearfix::after {
@@ -30,11 +34,16 @@ a {
     color: #9a9da2;
 }
 
+.navHeader {
+    position: fixed;
+    width: 100%;
+}
+
 .navBar {
     padding: 20px, 16px, 20px, 16px;
 }
 
-nav {
+.headNav {
     float: right;
 }
 
@@ -60,4 +69,260 @@ nav>ul>li>a {
 
 nav>ul>li>a:hover {
     border-bottom: 3px solid #e06567;
+}
+
+.bgview {
+    height: 515px;
+    background-image: url("../images/rs-cover.jpg");
+    background-position: center center;
+    background-size: cover;
+}
+
+.bgview .mask {
+    height: 515px;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.userCard {
+    max-width: 940px;
+    margin-top: -340px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ffffff;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.userCard .pictureAndText {
+    padding: 50px;
+}
+
+.userCard .pictureAndText .picture {
+    float: left;
+}
+
+.userCard .pictureAndText .text {
+    float: left;
+    margin-left: 65px;
+    width: 470px;
+}
+
+.userCard .pictureAndText .text .welcome {
+    background-color: #e6686a;
+    display: inline-block;
+    padding: 4px 16px;
+    color: white;
+    line-height: 22px;
+    position: relative;
+}
+
+.userCard .pictureAndText .text .welcome::after {
+    content: '';
+    display: block;
+    border: 10px solid transparent;
+    width: 0px;
+    border-left-color: #e6686a;
+    border-top-width: 0px;
+    position: absolute;
+    left: 4px;
+    top: 100%;
+}
+
+.userCard .pictureAndText .text h1 {
+    margin-top: 36px;
+    margin-bottom: 0;
+    font-weight: normal;
+}
+
+.userCard .pictureAndText .text p {
+    margin-top: 4px;
+}
+
+.userCard .pictureAndText .text hr {
+    width: 100%;
+    height: 0;
+    border: none;
+    border-top: 1px solid #dedede;
+}
+
+.userCard .pictureAndText .text dl dt,
+.userCard .pictureAndText .text dl dd {
+    float: left;
+}
+
+.userCard .pictureAndText .text dl dt {
+    width: 30%;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.userCard .pictureAndText .text dl dd {
+    width: 60%;
+    color: #9da0a7;
+    margin-top: 10px;
+}
+
+.userCard footer.media {
+    background-color: #e6686a;
+    text-align: center;
+    margin: auto auto;
+}
+
+.userCard footer.media a {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    padding: 5px;
+    color: white;
+    margin: 16px;
+    border-radius: 50%;
+    transition: all 0.3s;
+}
+
+.userCard footer.media a:hover {
+    background-color: #cf5d5f;
+}
+
+.downloadResume-wrapper {
+    text-align: center;
+}
+
+.downloadResume-wrapper .downloadResume {
+    display: inline-block;
+    padding: 21px 55px;
+    margin: 32px 1px;
+    border: 1px solid #cdcfd1;
+    color: #3D4452;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    transition: all 0.3s;
+    border-radius: 2px;
+}
+
+.downloadResume-wrapper .downloadResume:hover {
+    box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2);
+}
+
+.selfIntroduction {
+    text-align: center;
+    line-height: 1.8;
+    font-size: 18px;
+}
+
+.title {
+    text-align: center;
+    color: #3d4451;
+    font-size: 34px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+
+.skills {
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+}
+
+section.skills>ol {
+    background: white;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+    padding: 30px;
+    margin-top: 30px;
+}
+
+section.skills>ol li:nth-child(even) {
+    float: right;
+}
+
+section.skills>ol li {
+    float: left;
+    width: 48%;
+    box-sizing: border-box;
+}
+
+section.skills>ol li h3 {
+    font-size: 14px;
+    line-height: 1.1;
+    padding-right: 40px;
+}
+
+.progressBar {
+    height: 5px;
+    background: #FAE1E1;
+    border-radius: 2px;
+    margin: 4px 0 40px;
+}
+
+.progressBar .progress {
+    height: 100%;
+    background: #E6686A;
+    border-radius: 2px;
+}
+
+.portfolio {
+    text-align: center;
+    margin: auto auto;
+    margin-bottom: 60px;
+    max-width: 940px;
+}
+
+.portfolio .portfolioNav {
+    display: inline-block;
+    margin: auto auto;
+    vertical-align: top;
+    text-align: center;
+}
+
+.portfolio .portfolioNav ol {
+    padding: 0;
+}
+
+.portfolio .portfolioNav ol li {
+    float: left;
+    margin-left: 40px;
+    cursor: pointer;
+}
+
+.portfolio .portfolioNav ol>li:first-child {
+    margin-left: 0;
+}
+
+.bar {
+    height: 5px;
+    background: white;
+    margin-top: 5px;
+    margin-bottom: 28px;
+    border-radius: 2px;
+}
+
+.bar-inner {
+    height: 100%;
+    background: #E6686A;
+    border-radius: 2px;
+    transition: all 0.3s;
+}
+
+.bar.state-all .bar-inner {
+    margin-left: 0;
+    width: 50px;
+}
+
+.bar.state-frameworks .bar-inner {
+    margin-left: 65px;
+    width: 50px;
+}
+
+.bar.state-native .bar-inner {
+    margin-left: 140px;
+    width: 97px;
+}
+
+.works {
+    position: relative;
+}
+
+.works .big,
+.works .small {
+    position: absolute;
 }
